# firmware

./: CMakeLists.txt  README.md  README_FUNCIONES.md  firmware_vitaminap_technical_document.md  main.c
include/: common_types.h  sensor_bmi270.h  sensor_headers.h  sensor_max30102.h  service_headers.h  task_ambiente.h  task_pasos.h  task_postura.h  task_salud.h  task_sedentarismo.h  task_sueño.h
src/tasks/: task_actividad_fisica.c  task_alertas_salud.c  task_calidad_sueño.c  task_deteccion_estres.c  task_postura_encorvada.c
